fixed wonky buttons on ios

--- a/static/css/styling.css
+++ b/static/css/styling.css
@@ -1,3 +1,7 @@
+* {
+	-webkit-appearance: none
+}
+
 body {
 	background-color: #111;
 	margin: 10px
@@ -20,7 +24,7 @@ text {
 	line-height: 24px;
 	vertical-align: baseline;
 	position: relative;
-	color: #CCC;
+	color: #ccc;
 	font-size: 1em;
 	font-weight: 600;
 	border-bottom: none;
@@ -51,8 +55,8 @@ input[type=submit],input[type=submit]:hover {
 	text-decoration: none;
 	border: 0;
 	background-color: #222;
-	border-bottom: 2px solid #1A1A1A;
-	color: #FFF;
+	border-bottom: 2px solid #1a1a1a;
+	color: #fff;
 	cursor: pointer;
 	min-width: 73px;
 	font-weight: 600;
@@ -89,7 +93,7 @@ input[type=text] {
 	border-style: solid;
 	border-width: 1px;
 	box-shadow: rgba(0,0,0,.075) 0 1px 1px 0 inset;
-	color: #AAA;
+	color: #aaa;
 	cursor: text;
 	display: inline-block;
 	font-family: "segoe ui","trebuchet MS","Lucida Sans Unicode","Lucida Sans",sans-serif;
@@ -103,7 +107,7 @@ input[type=text] {
 	height: 33px;
 	letter-spacing: normal;
 	line-height: 18.2857px;
-	outline-color: #AAA;
+	outline-color: #aaa;
 	outline-style: none;
 	outline-width: 0;
 	padding: 8px;
@@ -125,7 +129,7 @@ input[type=text] {
 }
 
 label {
-	color: #E7E7E7;
+	color: #e7e7e7;
 	font-family: segoe ui,trebuchet MS,Lucida Sans Unicode,Lucida Sans,Sans-Serif;
 	display: inline-block;
 	max-width: 100%;
